unpackaged/objects/TorneioCompra__c.object
<CustomObject>
    <fields>
        <fullName>Fichas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Fichas</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FormaPagamento__c</fullName>
        <label>Forma Pagamento</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinheiro</fullName>
                </value>
                <value>
                    <fullName>Cartão/Débito</fullName>
                </value>
                <value>
                    <fullName>Cartão/Crédito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pago</fullName>
                </value>
                <value>
                    <fullName>Pendente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buy In</fullName>
                </value>
                <value>
                    <fullName>Rebuy</fullName>
                </value>
                <value>
                    <fullName>Add On</fullName>
                </value>
                <value>
                    <fullName>Taxa BuyIn</fullName>
                </value>
                <value>
                    <fullName>Taxa Rebuy</fullName>
                </value>
                <value>
                    <fullName>Time Chip</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TorneioEvento__c</fullName>
        <label>Torneio Evento</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>TorneioEvento__c.Status__c</field>
                <operation>equals</operation>
                <value>Não Iniciado, Em Andamento, Parado</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TorneioEvento__c</referenceTo>
        <relationshipLabel>Torneio Compras</relationshipLabel>
        <relationshipName>TorneioCompras</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TorneioInscricao__c</fullName>
        <label>Torneio Inscrição</label>
        <referenceTo>TorneioInscricao__c</referenceTo>
        <relationshipLabel>Torneio Compras</relationshipLabel>
        <relationshipName>Torneio_Compras</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Torneio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Torneio</label>
        <referenceTo>Torneio__c</referenceTo>
        <relationshipLabel>Torneio Compras</relationshipLabel>
        <relationshipName>Torneio_Compras</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ValorTotal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor Total</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Valor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Valor</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Torneio Compra</label>
    <nameField>
        <displayFormat>TC{000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Torneio Compras</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>